--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,31 @@
+appdirs==1.4.4
+astroid==2.4.2
+autopep8==1.5.3
 click==7.1.2
+colorama==0.4.3
+distlib==0.3.1
+dnspython==2.0.0
+email-validator==1.1.1
+filelock==3.0.12
 Flask==1.1.2
 Flask-Admin==1.5.6
 Flask-Login==0.5.0
 Flask-WTF==0.14.3
+gunicorn==20.0.4
+idna==2.10
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+mccabe==0.6.1
+pycodestyle==2.6.0
+pylint==2.5.3
+python-dateutil==2.8.1
+python-editor==1.0.4
+six==1.15.0
 SQLAlchemy==1.3.19
+toml==0.10.1
+virtualenv==20.0.27
 Werkzeug==1.0.1
+wrapt==1.12.1
 WTForms==2.3.3
