--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask==1.1.2
 Flask-Admin==1.5.6
 Flask-Login==0.5.0
 Flask-Migrate==2.5.3
+Flask-SocketIO==4.3.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 gunicorn==20.0.4
@@ -28,6 +29,8 @@ pycodestyle==2.6.0
 pylint==2.5.3
 python-dateutil==2.8.1
 python-editor==1.0.4
+python-engineio==3.13.2
+python-socketio==4.6.0
 six==1.15.0
 SQLAlchemy==1.3.19
 toml==0.10.1
