--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.4.2
 appdirs==1.4.4
 astroid==2.4.2
 autopep8==1.5.3
+cffi==1.14.3
 click==7.1.2
 colorama==0.4.3
 distlib==0.3.1
@@ -15,6 +16,8 @@ Flask-Migrate==2.5.3
 Flask-SocketIO==4.3.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+gevent==20.9.0
+greenlet==0.4.17
 gunicorn==20.0.4
 idna==2.10
 importlib-metadata==1.7.0
@@ -26,6 +29,7 @@ Mako==1.1.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 pycodestyle==2.6.0
+pycparser==2.20
 pylint==2.5.3
 python-dateutil==2.8.1
 python-editor==1.0.4
@@ -40,3 +44,5 @@ Werkzeug==1.0.1
 wrapt==1.12.1
 WTForms==2.3.3
 zipp==3.1.0
+zope.event==4.5.0
+zope.interface==5.1.0
