--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Flask-SocketIO==4.3.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 gevent==20.9.0
+gevent-websocket==0.10.1
 greenlet==0.4.17
 gunicorn==20.0.4
 idna==2.10
